--- a/pages/onlineTest.html
+++ b/pages/onlineTest.html
@@ -90,7 +90,7 @@ a:hover {
         flex-direction: column;
         background-color: #ff0000;
         position: absolute;
-        top: 60px;
+        top: 40px;
         left: 0;
         margin: 0;
         padding: 0;
@@ -102,12 +102,12 @@ a:hover {
 
     li {
         margin-left: 0;
-        padding: 1rem;
-        text-align: center;
+        padding: 0.1rem;
+        text-align: left;
     }
 
     a {
-        font-size: 1.5rem; /* Adjust font size for mobile */
+        font-size: 1.0rem; /* Adjust font size for mobile */
     }
 }
 
