--- a/pages/onlineTest.html
+++ b/pages/onlineTest.html
@@ -26,7 +26,7 @@
             align-items: center;
             padding-right: 2rem;
 	     padding-left: 2rem;
-            background-color: #FFF8DC;
+            background-color: #FF0000;
             position: relative;
         }
 
