--- a/pages/CONTACT.html
+++ b/pages/CONTACT.html
@@ -87,7 +87,7 @@
       }
     </style>
   </head>
-<body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
+<body>
   <!-- Bootstrap Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
     <div class="container-fluid">
