--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         line-height: 1.5;
         margin: 0;
         padding: 0;
-        background: linear-gradient(to bottom right, #4fd1c5, #818cf8, #60a5fa);
+        background: #F0FFFF;
       }
 
       /* Custom Navbar Color and Padding */
