--- a/pages/ABOUT.html
+++ b/pages/ABOUT.html
@@ -21,7 +21,7 @@
 
       /* Custom Navbar Color and Padding */
       .navbar-custom {
-        background-color: red; /* Red background */
+        background-color: SlateGray; /* Red background */
         padding-left: 2rem; /* Left padding using rem for better scalability */
         padding-right: 2rem; /* Right padding using rem */
       }
