--- a/pages/CONTACT.html
+++ b/pages/CONTACT.html
@@ -21,12 +21,12 @@
         line-height: 1.5;
         margin: 0;
         padding: 0;
-        background: linear-gradient(to bottom right, #4fd1c5, #818cf8, #60a5fa);
+        background: #F0FFFF;
       }
 
       /* Custom Navbar Color and Padding */
       .navbar-custom {
-        background-color: red; /* Red background */
+        background-color: SlateGray; /* Red background */
         padding-left: 30px; /* Left padding */
         padding-right: 30px; /* Right padding */
       }
