--- a/pages/onlineTest.html
+++ b/pages/onlineTest.html
@@ -17,9 +17,9 @@
              body {
             font-size: 1rem; /* 1rem is equal to 16px (default) */
             line-height: 1.4;
-			background: linear-gradient(to top right, #80cbc4, #e1bee7, #80ddea, #d1c4e9);
+	background: #F0FFFF;
             text-align: center;
-			 margin: 0;
+	 margin: 0;
             padding: 0;
         }
     /* Custom Navbar Color and Padding */
