--- a/pages/ChemistryWithMe.html
+++ b/pages/ChemistryWithMe.html
@@ -16,12 +16,12 @@
         line-height: 1.5;
         margin: 0;
         padding: 0;
-        background: linear-gradient(to bottom right, #4fd1c5, #818cf8, #60a5fa);
+        background: #F0FFFF;
       }
 
       /* Custom Navbar Color and Padding */
       .navbar-custom {
-        background-color: red; /* Red background */
+        background-color: SlateGray; /* Red background */
         padding-left: 2rem; /* Left padding using rem for better scalability */
         padding-right: 2rem; /* Right padding using rem */
       }
