--- a/pages/ABOUT.html
+++ b/pages/ABOUT.html
@@ -25,7 +25,10 @@
         padding-left: 2rem; /* Left padding using rem for better scalability */
         padding-right: 2rem; /* Right padding using rem */
       }
-
+ .navbar a:hover {
+        background-color: #9b1d38;
+        border-radius: 0.25rem;
+      }
       /* Footer */
       .footer {
         background-color: #2563eb;
