--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         padding-left: 30px; /* Left padding */
         padding-right: 30px; /* Right padding */
       }
+ .navbar a:hover {
+        background-color: #9b1d38;
+        border-radius: 0.25rem;
+      }
+	    
 /* Full-screen container for the background image */
     .hero {
       position: relative;
