--- a/pages/CONTACT.html
+++ b/pages/CONTACT.html
@@ -30,6 +30,10 @@
         padding-left: 30px; /* Left padding */
         padding-right: 30px; /* Right padding */
       }
+       .navbar a:hover {
+        background-color: #9b1d38;
+        border-radius: 0.25rem;
+      }
 
       /* Main Content */
       .content {
