--- a/pages/TEST-PDF.html
+++ b/pages/TEST-PDF.html
@@ -25,7 +25,10 @@
         padding-left: 30px; /* Left padding */
         padding-right: 30px; /* Right padding */
       }
-
+ .navbar a:hover {
+        background-color: #9b1d38;
+        border-radius: 0.25rem;
+      }
         /* Apply responsive units for padding and font size */
         .btn-group button {
             font-size: 1rem;  /* Adjust font size relative to root (16px by default) */
