--- a/pages/onlineTest.html
+++ b/pages/onlineTest.html
@@ -28,6 +28,11 @@
         padding-left: 2rem; /* Left padding using rem for better scalability */
         padding-right: 2rem; /* Right padding using rem */
       }
+ .navbar a:hover {
+        background-color: #9b1d38;
+        border-radius: 0.25rem;
+      }
+	    
 		.container {
     width: 85%; /* The width of the container */
     margin: 0 auto; /* Centers the container horizontally */
