--- a/pages/onlineTest.html
+++ b/pages/onlineTest.html
@@ -17,22 +17,21 @@
              body {
             font-size: 1rem; /* 1rem is equal to 16px (default) */
             line-height: 1.4;
-	background: #F0FFFF;
+	   background: #E0FFFF;
             text-align: center;
-	 margin: 0;
+	    margin: 0;
             padding: 0;
         }
-    /* Custom Navbar Color and Padding */
-      .navbar-custom {
-        background-color: SlateGray; /* Red background */
-        padding-left: 2rem; /* Left padding using rem for better scalability */
-        padding-right: 2rem; /* Right padding using rem */
-      }
- .navbar a:hover {
-        background-color: #9b1d38;
-        border-radius: 0.25rem;
-      }
-	    
+         .navbar-custom {
+            background-color: #FFF8DC;
+            padding-left: 2vw;
+            padding-right: 2vw;
+        }
+
+        .navbar a:hover {
+            background-color: #FFFFFF;
+            border-radius: 0.25rem;
+        }
 		.container {
     width: 85%; /* The width of the container */
     margin: 0 auto; /* Centers the container horizontally */
@@ -63,7 +62,7 @@
       }
 
       .btn {
-        padding: 0.3em 1.5em;
+        padding: 0.5em 1.5em;
         font-size: 1rem;
         margin: 0.2em;
         border-radius: 0.5em;
@@ -176,6 +175,12 @@
             margin-top: 50px;
             color: #2c3e50;
         }
+		.prof-list {
+		 margin-top: 20px;
+      padding-left: 12px;
+      padding-right: 12px;
+    }
+
     </style>
   </head>
 
