--- a/pages/onlineTest.html
+++ b/pages/onlineTest.html
@@ -190,61 +190,37 @@
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="./ChemistryWithMe.html"
-          >ChemistryWithMe</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+          >ChemistryWithMe</a >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
               <a
                 class="nav-link text-white active"
                 aria-current="page"
-                href="../index.html"
-                aria-label="Go to Home Page"
-                >HOME</a
-              >
+                href="../index.html">HOME</a></li>
+  
+			
+            <li class="nav-item">
+              <a
+                class="nav-link text-white"
+                href="./onlineTest.html">ONLINE TEST</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link text-white"
-                href="./onlineTest.html"
-                aria-label="Online Test"
-                >ONLINE TEST</a
-              >
+                href="./TEST-PDF.html">TEST PDF</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link text-white"
-                href="./TEST-PDF.html"
-                aria-label="Download Test PDFs"
-                >TEST PDF</a
-              >
+                href="./CONTACT.html">CONTACT</a>
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link text-white"
-                href="./CONTACT.html"
-                aria-label="Contact Us"
-                >CONTACT</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link text-white"
-                href="./ABOUT.html"
-                aria-label="About Us"
-                >ABOUT</a
-              >
+              <a class="nav-link text-white"
+                href="./ABOUT.html">ABOUT</a>
             </li>
           </ul>
         </div>
