--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       /* Custom Navbar Color and Padding */
       .navbar-custom {
-        background-color: SlateGray; /* Red background */
+        background-color: SlateGray; /* SlateGray; background */
         padding-left: 30px; /* Left padding */
         padding-right: 30px; /* Right padding */
       }
