--- a/pages/onlineTest.html
+++ b/pages/onlineTest.html
@@ -17,16 +17,16 @@
              body {
             font-size: 1rem; /* 1rem is equal to 16px (default) */
             line-height: 1.4;
-	   background: #E0FFFF;
+	   background: #F0FFFF;
             text-align: center;
 	    margin: 0;
             padding: 0;
         }
-         .navbar-custom {
-            background-color: #FFF8DC;
-            padding-left: 2vw;
-            padding-right: 2vw;
-        }
+        .navbar-custom {
+        background-color: SlateGray; /* SlateGray; background */
+        padding-left: 30px; /* Left padding */
+        padding-right: 30px; /* Right padding */
+      }
 
         .navbar a:hover {
             background-color: #FFFFFF;
